Disable irrelevant buttons, processing selected

--- a/FontFit.dproj
+++ b/FontFit.dproj
@@ -121,7 +121,9 @@
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <VerInfo_Keys>CompanyName=Dmitry Iatsenko Home;FileDescription=SVG-font modification;FileVersion=1.0.0.0;InternalName=;LegalCopyright=freeware opensource;LegalTrademarks=;OriginalFilename=FontFit;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=SVG-font modification: autokerning and glyph aligning</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=Dmitry Iatsenko Home;FileDescription=SVG-font modification: autokerning and glyph aligning;FileVersion=1.0.0.1;InternalName=;LegalCopyright=freeware opensource;LegalTrademarks=;OriginalFilename=FontFit;ProgramID=com.embarcadero.$(MSBuildProjectName);ProductName=$(MSBuildProjectName);ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_Build>1</VerInfo_Build>
+        <VerInfo_AutoGenVersion>true</VerInfo_AutoGenVersion>
     </PropertyGroup>
     <ItemGroup>
         <DelphiCompile Include="$(MainSource)">
